<resources>
    <string name="app_name">SyfeiKarim - Dicoding Submission 3</string>
    <string name="list_user">List User</string>
    <string name="user_detail">User Detail</string>
    <string name="avatar">Avatar</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="search_hint">Masukkan Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_follower">Followers</string>
    <string name="tab_following">Following</string>
    <string name="cari">Cari</string>
    <string name="jumlah_foll">80</string>
    <string name="aksi_favorite">Aksi Favorite</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="setting">setting</string>
    <string name="jadikan_favorite">Jadikan Favorite</string>
    <string name="list_favorite">List Favorite</string>
</resources>