<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:background="@color/colorBackgorund">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar_fav"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_username_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/img_avatar_fav"
        app:layout_constraintStart_toStartOf="@id/img_avatar_fav"
        app:layout_constraintTop_toBottomOf="@id/img_avatar_fav"
        android:text="@string/username"
        android:textStyle="bold"
        android:textSize="24sp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_name_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tv_username_fav"
        app:layout_constraintStart_toStartOf="@id/tv_username_fav"
        app:layout_constraintTop_toBottomOf="@id/tv_username_fav"
        android:text="@string/name"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_company_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tv_name_fav"
        app:layout_constraintStart_toStartOf="@id/tv_name_fav"
        app:layout_constraintTop_toBottomOf="@id/tv_name_fav"
        android:text="@string/company"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_location_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tv_company_fav"
        app:layout_constraintStart_toStartOf="@id/tv_company_fav"
        app:layout_constraintTop_toBottomOf="@id/tv_company_fav"
        android:text="@string/location"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tv_repository_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tv_location_fav"
        app:layout_constraintStart_toStartOf="@id/tv_location_fav"
        app:layout_constraintTop_toBottomOf="@id/tv_location_fav"
        android:text="@string/repository"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tv_followers_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tv_repository_fav"
        app:layout_constraintStart_toStartOf="@id/tv_repository_fav"
        app:layout_constraintTop_toBottomOf="@id/tv_repository_fav"
        tools:text="@string/jumlah_foll"
        android:fontFamily="sans-serif-black"
        android:gravity="start"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_following_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_foll"
        android:fontFamily="sans-serif-black"
        android:gravity="end"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tv_repository_fav"
        app:layout_constraintRight_toLeftOf="@id/tv_repository_fav"
        app:layout_constraintTop_toBottomOf="@id/tv_repository_fav"/>

    <ProgressBar
        android:id="@+id/progressBar_fav"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>